# simple_git_cicd

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: release.yaml
migrations/: 20251120000000_initial_schema.sql  20251122132925_add_dry_run.sql
scripts/: build_native.sh  docker_build_binary.sh
src/: error.rs  handlers.rs  job.rs  lib.rs  logging.rs  main.rs  rate_limit.rs  ui.rs  utils.rs  webhook.rs
src/api/: config.rs  handlers.rs  jobs.rs  mod.rs  projects.rs  stats.rs  stream.rs  webhook.rs
src/db/: mod.rs  store.rs
ui/: package.json  svelte.config.js  vite.config.ts
ui/src/lib/: utils.ts
ui/src/lib/api/: client.ts  sse.ts  types.ts
ui/src/lib/components/: DurationBadge.svelte  JobCard.svelte  StatusBadge.svelte
ui/src/lib/stores/: theme.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/config/: +page.svelte
ui/src/routes/jobs/: +page.svelte
ui/src/routes/jobs/[id]/: +page.svelte
ui/src/routes/projects/: +page.svelte
