[package]
name = "simple_git_cicd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "uuid", "time", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
